--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
+    "sass": "^1.60.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start run-script scss scss-doc",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "scss": "sass --watch ./src/assets/sass:./src/assets/css",
+    "scss-doc": "sass --watch ./src/docs:./src/docs"
   },
   "eslintConfig": {
     "extends": [
