Add patient detail page and its styling and also update in env page

--- a/backend/.env-example
+++ b/backend/.env-example
@@ -1,10 +1,12 @@
 # Since we have used Prisma ORM package, we have to add our database url as show below;
 
-# DATABASE_USER = 'Your Database username'
+# DATABASE_PW = 'Your Database password'
+
+# DATABASE_USER = 'Your Database usernmae'
 
 # BACKEND_URL = "Your backend url that you have hosted like 'localhost:5432'
 
 # DATABASE_USER = "Your database name that you're going to connect
 
-DATABASE_URL="postgresql://postgres:DATABASE_USER@BACKEND_URL/DATABASE_NAME?schema=public"
+DATABASE_URL="postgresql://DATABASE_USER:DATABASE_PW@BACKEND_URL/DATABASE_NAME?schema=public"
 JWT_LOGIN_TOKEN=pms-login-token
